# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provada"
version = "1.0.0"
authors = [
  { name="Sophia Lu", email="sophialu@stanford.edu" },
  { name="Xiaowei Zhang", email="zhangxw@stanford.edu" },
]
description = "Official implementation of the ProVADA package for conditional protein variant design."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# --- DEPENDENCIES ---
dependencies = [
    "numpy ~= 2.2.5",
    "torch ~= 2.7.0",
    "transformers == 4.51.3",
    "pandas ~= 2.2.3",
]

[tool.setuptools]
packages = ["provada"]

[project.urls]
Homepage = "https://github.com/SUwonglab/provada"
"Bug Tracker" = "https://github.com/SUwonglab/provada/issues"
"Publication" = "https://www.biorxiv.org/content/10.1101/2025.07.11.664238v1"
